<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JobStream</string>
    <string name="action_settings">Settings</string>
    <string name="banner_desc">Job Seeker Home Page</string>
    <string name="title_activity_search">Job Search Page</string>
    <string name="search_hint">Search Jobs&#8230;</string>
    <string name="no_results_text">No Job Results&#8230;</string>
    <string name="title_activity_results">Job Results</string>
    <string name="search_title">Title: </string>
    <string name="search_type">Type: </string>
    <string name="search_employer">Employer: </string>
    <string name="search_industry">Industry: </string>
    <string name="search_location">Location: </string>
    <string name="search_hours">Hours: </string>
    
    <string name="account">account</string>
    <string name="settings">settings</string>
    <string name="search">search</string>
    <string name="diary">diary</string>
    <string name="saved_jobs">saved jobs</string>
    <string name="help">help</string>
    
     <string name="job_sites">Job Sites</string>
      <string name="social_sites">Social Media</string>
    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    
    <string-array name="types">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string-array name="industries">
        <item>IT</item>
        <item>Catering</item>
        <item>Retail</item>
        <item>Sales/Marketing</item>
        <item>Oil/Gas</item>
    </string-array>
    
    <string-array name="hours">
        <item>Up To 16</item>
        <item>16 &#8211; 24</item>
        <item>Greater Than 24</item>
    </string-array>
    
</resources>
