<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity"
    android:orientation="vertical" >

    <!-- Small Banner -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:contentDescription="@string/banner_desc" 
        android:src="@drawable/ic_launcher" />
    
    <!-- Title Field Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title" />
        
        <EditText
            android:id="@+id/search_edit_title"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <!-- Employer Field Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:id="@+id/search_employer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_employer" />
        
        <EditText
            android:id="@+id/search_edit_employer"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <!-- Type Field Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/search_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_type"/>
        
        <Spinner
            android:id="@+id/search_edit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <!-- Hours Field Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/search_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_hours"/>
        
        <Spinner
            android:id="@+id/search_edit_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <!-- Industry Field Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:id="@+id/search_industry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_industry"/>
        
        <Spinner
            android:id="@+id/search_edit_industry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <!-- Location Field Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:id="@+id/search_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location"/>
        
        <EditText
            android:id="@+id/search_edit_location"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
 
    <!-- "Search" Button -->
    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />
    
</LinearLayout>
