<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jobseeker="http://schemas.android.com/apk/res/itp.team1.jobseeker"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/main_background"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Small Banner -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/banner_desc"
                android:src="@drawable/dwp_logo" />

            <!-- Title Field Row -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Search: "
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/search_edit_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Location Field Row -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/search_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_location"
                    android:textStyle="bold" />
                
                <Spinner
                        android:id="@+id/search_edit_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:spinnerMode="dropdown"/>
            </LinearLayout>

            <!-- Employer Field Row -->

            <LinearLayout
                android:id="@+id/advanced_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/search_employer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_employer"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/search_edit_employer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

                <!-- Type Field Row -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/search_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_type"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/search_edit_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:spinnerMode="dropdown"/>
                </LinearLayout>

                <!-- Hours Field Row -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/search_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_hours"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/search_edit_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:spinnerMode="dropdown"/>
                </LinearLayout>

                <!-- Industry Field Row -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/search_salary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Salary: "
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/search_edit_salary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>"
                </LinearLayout>
            </LinearLayout>
            <!-- "Search" Button -->

            <TextView
                android:id="@+id/advanced_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:text="Advanced Search"
                android:textColor="@color/medium_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/medium_blue"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search_simple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/top_navigation"
        layout="@layout/action_bar" />

</FrameLayout>